Body overflow bugfix

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -18,6 +18,7 @@ body {
   line-height: 110%;
   font-weight: 400;
   max-width: 100vw;
+  min-height: 100vh;
   overflow-x: hidden;
   margin: 0;
   transition: all 1s;
